# openloom

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.ai/: OPENLOOM_INTEGRATION.md  OPENLOOM_LEVELS.md  OPENLOOM_PACKAGING.md  OPENLOOM_PLAN.md
.github/workflows/: ci.yml  lint.yml  release.yml
docs/: architecture.md  configuration.md  inbox.md  notifications.md  webhook-integration.md
examples/: task.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  Icon.svelte  dashboard.css  main.js  style.css  usage.js
scripts/: build-exe.ps1  launch.bat  launch.ps1
src/openloom/: __main__.py  cli.py  config.py  init_config.py
src/openloom/core/: checker.py  events.py  harness.py  notify_config.py  protocols.py  registry.py  settings_source.py  sink.py  source.py  store.py  webhook_types.py
src/openloom/levels/config/: spec.py
src/openloom/levels/inbox/: __init__.py  parsing.py  watcher.py
src/openloom/levels/manual/: checker.py  sink.py  source.py  watch.py
src/openloom/levels/notify/: __init__.py  config.py  file.py  inbound.py  webhook.py
src/openloom/levels/openspec/: cold.py
src/openloom/levels/server/: console_sink.py  monitor.py  serve.py  web_sink.py
src/openloom/levels/storage/: __init__.py  base.py  config.py  formats.py  fs.py  runner.py
src/openloom/levels/ui/: sink.py
src/openloom/runtime/: factory.py  opencode.py  planner.py  prompts.py  session_status.py  telemetry.py
src/openloom/server/: app.py  cold.py  recent.py
src/openloom/server/routes/: sessions.py  tasks.py  webhooks.py
src/openloom/server/static/: index.html
src/openloom/server/static/app/: index.html
src/openloom/server/static/app/assets/: index-2UrBppYG.css  index-3inQKe6U.js  index-4peaDQbb.js  index-5EW5U6PC.css  index-B4lrr-PM.css  index-BKcJQxTd.css  index-BSseQWLe.js  index-BWWiveHa.js  index-BYCJyiRH.css  index-BjPVjUXW.js  index-BneGJV7k.css  index-BxsVeXUg.js  index-CGgaA1pw.js  index-CQfDlDFd.js  index-CXpSpLMp.js  index-C_Pvcz5Z.js  index-CaebT-nz.css  index-CeNnmi0F.css  index-ClXLZ8K9.js  index-CmkMR8AX.js  index-Cq7ei-PL.css  index-Cr12k2ME.css  index-Cu3Hb6b1.js  index-D8GXeiLn.css  index-DBkfxtCr.js  index-DCrQTkPe.js  index-DLvoUqVn.css  index-DN9Xmaup.css  index-DO8G3Q3s.css  index-DS1p7QCs.js  index-DV4TxdyY.js  index-DVAOyz9p.js  index-DWCC5Oq2.css  index-DjYSLdBc.css  index-Dps33YCm.css  index-DyxOkGku.js  index-FBZpJtat.js  index-HReHj9Q7.js  index-ToQb8sL-.js  index-_F-pKhAm.css  (+5 more)
tests/: test_cli_banner.py  test_cli_serve_overrides.py  test_config.py
tests/contracts/: test_architecture.py
tests/core/: test_events.py  test_harness.py  test_store.py
tests/levels/: test_formats_timezone.py  test_inbox.py  test_notify.py  test_webhook_integration.py
tests/runtime/: test_asking.py  test_opencode_connect.py  test_opencode_fallbacks.py  test_opencode_permissions.py  test_opencode_prompt_async.py  test_opencode_questions.py  test_opencode_stats.py  test_planner.py  test_prompts.py  test_telemetry.py
tests/server/: test_monitor.py  test_routes.py
