[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openloom"
version = "0.2.0"
description = "OpenLoom: a lightweight agent task harness — schedule, monitor, and verify AI coding tasks."
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = ["httpx>=0.27", "pyyaml>=6.0"]

[project.optional-dependencies]
openspec = ["openspec>=0.4"]
ui       = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "sse-starlette"]
validate = []
github   = ["PyGithub>=2.0"]
server   = ["openloom[ui]"]

[project.scripts]
openloom = "openloom.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openloom"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.importlinter]
root_package = "openloom"

[[tool.importlinter.contracts]]
name = "core independence"
type = "forbidden"
source_modules = ["openloom.core"]
forbidden_modules = [
  "openloom.levels",
  "openloom.levels.manual",
  "openloom.levels.config",
  "openloom.runtime",
  "openloom.server",
]
message = "core/ must not import from levels/ runtime/ or server/"

[[tool.importlinter.contracts]]
name = "level isolation"
type = "independence"
modules = [
  "openloom.levels.manual",
  "openloom.levels.config",
]
message = "Levels must not import from each other"
