[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openloom"
version = "0.12.0"
description = "OpenLoom: a lightweight agent task harness — schedule, monitor, and verify AI coding tasks."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["opencode", "agent", "harness", "ai", "coding-assistant", "task-runner"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Typing :: Typed",
]
dependencies = ["httpx>=0.27", "pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/atbeta/openloom"
Repository = "https://github.com/atbeta/openloom"
Issues = "https://github.com/atbeta/openloom/issues"

[project.optional-dependencies]
# openspec PyPI package not published yet; level uses cold detection (is_openspec_available).
openspec = []
ui       = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "sse-starlette"]
validate = []
github   = ["PyGithub>=2.0"]
server   = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "sse-starlette"]

[project.scripts]
openloom = "openloom.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "ruff>=0.8",
  "mypy>=1.13",
  "import-linter>=2.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["openloom"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/openloom"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.importlinter]
root_package = "openloom"

[[tool.importlinter.contracts]]
name = "core independence"
type = "forbidden"
source_modules = ["openloom.core"]
forbidden_modules = [
  "openloom.levels",
  "openloom.levels.notify",
  "openloom.levels.server",
  "openloom.runtime",
  "openloom.server",
]
message = "core/ must not import from levels/ runtime/ or server/"

[[tool.importlinter.contracts]]
name = "level isolation"
type = "independence"
modules = [
  "openloom.levels.notify",
  "openloom.levels.server",
]
message = "Levels must not import from each other"

[[tool.importlinter.contracts]]
name = "server does not import levels"
type = "forbidden"
source_modules = ["openloom.server"]
forbidden_modules = [
  "openloom.levels",
  "openloom.levels.notify",
  "openloom.levels.server",
]
message = "server/ must be level-agnostic — it consumes core/ + runtime/ only"
